# HN-AI-6th-Submission

./: .gitattributes  .gitignore  ARCHITECTURE_DIAGRAM.md  DEVELOPMENT_MANUAL.md  ELEVENLABS_BEGINNER_GUIDE.md  ELEVENLABS_VOICE_AGENT_SETUP.md  NGROK_SETUP_GUIDE.md  README.md  package-lock.json  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/clients/: elevenlabs.py
backend/app/config/: loader.py  settings.py
backend/app/db/: models.py  session.py
backend/app/middleware/: cache.py  rate_limit.py
backend/app/models/: job_spec.py
backend/app/services/: call_list.py  caller.py  closer.py  document_intake.py  quote_builder.py
backend/tests/: conftest.py
backend/tests/eval/: test_golden_calls.py
backend/tests/integration/: test_full_flow.py  test_health.py  test_jobs_api.py  test_jobs_api_edge.py
backend/tests/performance/: test_performance.py
backend/tests/unit/: test_caller_closer.py  test_document_intake.py  test_elevenlabs.py  test_job_spec.py  test_middleware.py  test_reports_api.py
config/verticals/: moving.yaml
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/calls/: page.tsx
frontend/app/components/: ProgressStepper.tsx  VoiceButton.tsx  (+1 more)
frontend/templates/: base.html  calls.html  confirm_spec.html  document_intake.html  home.html  negotiate.html  quotes.html  report.html  voice_intake.html
scripts/: quick_start.py  run_demo.py  run_ngrok.py  seed_counter_agents.py  setup_voice_agents.py  test_voice_flow.py  test_webhook.py  validate_api_key.py
(+16 files in other folders)
