[project]
name = "the-negotiator"
version = "0.1.0"
description = "Voice agents that call, compare, and haggle — Moving Companies vertical"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.4",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "freezegun>=1.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.coverage.run]
source = ["backend/app"]
